--- a/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
@@ -3,9 +3,12 @@ launcher_language: Launcher language:
 launcher_theme: Launcher theme: 
 launcher_version: Launcher version: 
 loading: Loading...
+loading_files: Downloading files...
 ping: Ping: 
 yes: Yes
 no: No
+update_check: Check for updates
+discord_allow: Discord integration
 update_title: New update
 update: <html>New launcher version is released %%VERSION%%<br>Do you want to update the launcher?</html>
 update_error_title: Update error
@@ -14,6 +17,10 @@ update_error: Can't update the launcher...
 update_error_link: Can't update the launcher.
 launch_error_title: Launch Error
 launch_error_file: <html>The launch file you've selected seems to be corrupted.<br>Please, check your game's path.<br>If it's selected right, re-download the game.</html>
+savesettings_error_title: Failure in process of saving settings
+savesettings_error: <html>Failed to save game client settings, but launcher settings saved.<br>You should launch game at least once to change its settings.<br>\
+Launch game and try to change settings again.</html>
+error_game_is_modified: Game is corrapted. Launch imposible
 btn_file_not_choosed: Game folder is not selected.
 launch_error_file_not_choosed: It seems you did not select a Game Launch file...
 btn_change_file_game: Select the Game File
@@ -84,3 +91,20 @@ msg_client_performance_mid: Average
 msg_client_performance_high: High
 msg_client_performance_max: Maximum
 msg_client_performance_other: Other
+
+# WINE сообщения
+msg_wine_info_1: It looks like you are playing on unix ... Need for speed: World does not support your platform,\n\
+therefore, the game can only be launched via WINE.\n\
+If you have not installed WINE, then click NO and install.\n\
+If you have WINE installed, click YES and you will be prompted to select the WINE startup file.\n\
+
+msg_wine_info_2: Now you need to choose WINEPREFIX.\n\
+WINEPREFIX - the place where all the WINDOWS files are located,\n\
+through which the game will be launched.\n\
+Attention! If you are not sure what it is, then enter google 'What is WINEPREFIX?'
+
+msg_wine_info_3: WINE WAYS SAVED.\n\
+After clicking OK, the game will start, via the WINE you specified.\n\
+Attention! WINE does not give 100% launch of the game.\n\
+Also, the work of WINE and the game does not depend on this launcher.\n\
+This window will appear again only after deleting the launcher configuration.
