--- a/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
@@ -7,8 +7,11 @@ loading_files: Downloading files...
 ping: Ping: 
 yes: Yes
 no: No
+critical error: A critical error has been detected that prevents the program from working. \n\
+Please report it to the launcher developer \n\
+Email: vadik.golubeff@yandex.ru \n\
+Below is a report on the work of the launcher
 update_check: Check for updates
-discord_allow: Discord integration
 update_title: New update
 update: <html>New launcher version is released %%VERSION%%<br>Do you want to update the launcher?</html>
 update_error_title: Update error
@@ -26,6 +29,12 @@ launch_error_file_not_choosed: It seems you did not select a Game Launch file...
 btn_change_file_game: Select the Game File
 error_inner: Inner launcher error
 
+servers_empty_title: Server list is empty
+servers_empty: <html>It looks like the list of servers is empty ... <br>\
+Perhaps this is due to an error. <br>\
+If the culprit of empty servers is an error, <br>then you can find it in the logs (ALT + L) <br>\
+Try updating again?</html>
+
 # Общие кнопки
 btn_settings: Settings
 btn_back: Back
@@ -42,8 +51,8 @@ server_not_response: Not response
 # Поля для форм
 label_server_choose: Select a server: 
 label_server: Server: 
-label_login: Email: 
-label_password: Password: 
+label_login: Email
+label_password: Password
 btn_auth_submit: Login
 btn_auth_redirect: Login
 btn_reg_submit: Register
@@ -70,6 +79,8 @@ msg_background_work_deny: Close the launcher after starting the game
 settings_title: Settings
 btn_client_settings: Client settings
 btn_client_settings_save: Save
+discord_allow: Discord integration
+dynamic_background: Dynamic background
 msg_client_language: Client language
 msg_client_audiomode: Audio mode
 msg_client_performance: Performance level
