--- a/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
@@ -3,37 +3,55 @@ launcher_language: Launcher language:
 launcher_theme: Launcher theme: 
 launcher_version: Launcher version: 
 loading: Loading...
-loading_files: Downloading files...
+loading_files: Downloading files (%CUR%/%MAX%)...
 ping: Ping: 
 yes: Yes
 no: No
+
 critical error: A critical error has been detected that prevents the program from working. \n\
 Please report it to the launcher developer \n\
 Email: vadik.golubeff@yandex.ru \n\
 Below is a report on the work of the launcher
-update_check: Check for updates
+
+error_game_is_modified: Game is corrapted. Launch imposible
+btn_file_not_choosed: Game folder is not selected.
+launch_error_file_not_choosed: The game directory was not found. \n\
+Please select a directory in which \n\
+are the game files.
+btn_file_select: Select
+btn_select_game_folder: Select the game folder
+error_inner: Inner launcher error
+
 update_title: New update
 update: <html>New launcher version is released %%VERSION%%<br>Do you want to update the launcher?</html>
 update_error_title: Update error
 update_error_compile: You should compile the launcher for updating
 update_error: Can't update the launcher...
 update_error_link: Can't update the launcher.
+
+gamedir_error_title: Ошибка директории игры
+gamedir_error_file: В выбранной вами директории не найден nfsw.exe\n\
+Вы уверены, что хотите выбрать эту директорию?
+
 launch_error_title: Launch Error
-launch_error_file: <html>The launch file you've selected seems to be corrupted.<br>Please, check your game's path.<br>If it's selected right, re-download the game.</html>
+launch_error_file: <html>The launch file you've selected seems to be corrupted.<br>\
+Please, check your game's path.<br>\
+If it's selected right, re-download the game.</html>
+
 savesettings_error_title: Failure in process of saving settings
 savesettings_error: <html>Failed to save game client settings, but launcher settings saved.<br>You should launch game at least once to change its settings.<br>\
 Launch game and try to change settings again.</html>
-error_game_is_modified: Game is corrapted. Launch imposible
-btn_file_not_choosed: Game folder is not selected.
-launch_error_file_not_choosed: It seems you did not select a Game Launch file...
-btn_change_file_game: Select the Game File
-error_inner: Inner launcher error
 
 servers_empty_title: Server list is empty
 servers_empty: <html>It looks like the list of servers is empty ... <br>\
 Perhaps this is due to an error. <br>\
 If the culprit of empty servers is an error, <br>then you can find it in the logs (ALT + L) <br>\
 Try updating again?</html>
+
+reg_error_title: Registration error
+reg_error: You did not enter a username or password. \n\
+Before registering, fill in the login and password column. \n\
+They are located just above and to the right of the registration button.
 
 # Общие кнопки
 btn_settings: Settings
@@ -74,26 +92,27 @@ msg_reg_error_email: This email was not found
 
 # Окно настроек
 msg_background_work_deny: Close the launcher after starting the game
+discord_allow: Discord integration
+dynamic_background: Dynamic background
+update_check: Check for updates
 
 # Окно настроек клиента
 settings_title: Settings
 btn_client_settings: Client settings
 btn_client_settings_save: Save
-discord_allow: Discord integration
-dynamic_background: Dynamic background
 msg_client_language: Client language
 msg_client_audiomode: Audio mode
+msg_client_audioquality: Audio quality
+msg_client_brightness: Brightness.
 msg_client_performance: Performance level
 msg_client_vsync: VSync
-msg_client_audioquality: Audio quality
-msg_client_brightness: Brightness
+
 msg_client_motionblur: Motion Blur-effect
 msg_client_overbright: Overbright-effect
 msg_client_particlesystem: Particle system
 msg_client_shaderdetail: Shader detail
 msg_client_shadewdetail: Shadow detail
 msg_client_watersim: Water sim
-
 msg_client_audiomode_stereo: Stereo
 msg_client_audiomode_around: Around
 msg_client_performance_min: Minimum
@@ -104,6 +123,9 @@ msg_client_performance_max: Maximum
 msg_client_performance_other: Other
 
 # WINE сообщения
+msg_platform_unsupported: Похоже ваша платформа не поддерживается лаунчером.\n\
+Сожалеем, но дальше вам не пройти
+
 msg_wine_info_1: It looks like you are playing on unix ... Need for speed: World does not support your platform,\n\
 therefore, the game can only be launched via WINE.\n\
 If you have not installed WINE, then click NO and install.\n\
