--- a/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
@@ -3,31 +3,49 @@ launcher_language: Язык лаунчера:
 launcher_theme: Тема лаунчера: 
 launcher_version: Версия лаунчера: 
 loading: Загрузка...
-loading_files: Загрузка файлов...
+loading_files: Загрузка файлов (%CUR%/%MAX%)...
 ping: Пинг: 
 yes: Да
 no: Нет
+
 critical error: Обнаружена критическая ошибка, которая не позволяет программе работать.\n\
-Пожалуйста сообщите о ней разработчику лаунчера\n\
+Пожалуйста сообщите о ней разработчику лаунчера \n\
 Email: vadik.golubeff@yandex.ru\n\
 Ниже приведен отчет о работе лаунчера
-update_check: Проверять обновления
+
+error_game_is_modified: Игра повреждена, запуск невозможен.
+btn_file_not_choosed: Файл не выбран.
+launch_error_file_not_choosed: Не найдена директория игры.\n\
+Пожалуйста, выберите каталог,\n\
+в котором находятся файлы игры.
+btn_file_select: Выбрать
+btn_select_game_folder: Выбрать директорию с игрой
+error_inner: Внутренняя ошибка лаунчера
+
 update_title: Новое обновление
 update: <html>Вышла новая версия лаунчера %%VERSION%%<br>Хотите обновить?</html>
 update_error_title: Ошибка обновления
 update_error_compile: Для обновления, лаунчер должен быть скомпилирован
 update_error: Не удалось обновить лаунчер...
 update_error_link: Не удалось обновить лаунчер.
+
+gamedir_error_title: Ошибка директории игры
+gamedir_error_file: В выбранной вами директории не найден nfsw.exe\n\
+Вы уверены, что хотите выбрать эту директорию?
+gamedir_error_abort: В выбранной вами директории не найден nfsw.exe\n\
+Изменить директорию?
+
 launch_error_title: Ошибка запуска
 launch_error_file: <html>Некорректный файл запуска.<br>Проверьте верный ли файл выбран.<br>Если файл выбран верно, попробуйте скачать игру заново.</html>
+
 savesettings_error_title: Ошибка при попытке сохранения настроек
 savesettings_error: <html>Не удалось сохранить настройки клиента, но настройки лаунчера сохранены.<br>Не найден файл настроек.<br>\
 Для редактирования настроек игры вы должны хотя бы раз запустить игру.<br>Запустите игру и повторите изменить настройки снова.</html>
-error_game_is_modified: Игра повреждена, запуск невозможен.
-btn_file_not_choosed: Файл не выбран.
-launch_error_file_not_choosed: Упс. Кажется вы не выбрали файл запуска игры...
-btn_change_file_game: Выбрать файл запуска игры
-error_inner: Внутренняя ошибка лаунчера
+
+reg_error_title: Ошибка регистрации
+reg_error: Вы не ввели логин или пароль.\n\
+Перед тем как регистрироваться заполните колонку логина и пароля.\n\
+Они находятся чуть выше и правее кнопки регистрации.
 
 servers_empty_title: Список серверов пуст
 servers_empty: <html>Похоже список серверов пуст...<br>\
@@ -74,26 +92,27 @@ msg_reg_error_email: Не верно введен email
 
 # Окно настроек
 msg_background_work_deny: Закрыть лаунчер, после запуска игры
+discord_allow: Интеграция discord
+dynamic_background: Динамический фон
+update_check: Проверять обновления
 
 # Окно настроек клиента
 settings_title: Настройки
 btn_client_settings: Настройки клиента
 btn_client_settings_save: Сохранить
-discord_allow: Интеграция discord
-dynamic_background: Динамический фон
 msg_client_language: Язык игры
 msg_client_audiomode: Режим звука
-msg_client_performance: Настройки графики
-msg_client_vsync: Вертикальная синхронизация
 msg_client_audioquality: Более качественный звук
 msg_client_brightness: Яркость
+msg_client_performance: Настройки графики
+msg_client_vsync: Вертикальная синхронизация
+
 msg_client_motionblur: Размытие в движении
 msg_client_overbright: Overbright-effect
 msg_client_particlesystem: Включить частицы
 msg_client_shaderdetail: Качество шейдеров
 msg_client_shadewdetail: Качество теней
 msg_client_watersim: Симуляция воды
-
 msg_client_audiomode_stereo: Стерео
 msg_client_audiomode_around: Вокруг
 msg_client_performance_min: Минимум
@@ -104,17 +123,20 @@ msg_client_performance_max: Максимальная
 msg_client_performance_other: Другие
 
 # WINE сообщения
+msg_platform_unsupported: Похоже ваша платформа не поддерживается лаунчером.\n\
+Сожалеем, но дальше вам не пройти
+
 msg_wine_info_1: Похоже вы играете на unix... Need for speed: World не поддерживает вашу платформу,\n\
 поэтому игру можно запустить только через WINE.\n\
 Если у вас не установлен WINE, то нажмите НЕТ и установите.\n\
-Если у вас установлен WINE нажмите ДА и вам предложит выбрать файл запуска WINE
+Если у вас установлен WINE - нажмите ДА и вам предложит выбрать файл запуска WINE
 
 msg_wine_info_2: Теперь вам необходимо выбрать WINEPREFIX.\n\
 WINEPREFIX - место, в котором находятся все файлы WINDOWS,\n\
 через которые будет запущена игра.\n\
 Внимание! Если вы не уверены, что это, то введите в google 'Что такое WINEPREFIX?'
 
-msg_wine_info 3: Пути к WINE сохранены.\n\
+msg_wine_info_3: Пути к WINE сохранены.\n\
 После нажатия OK игра будет запущена через тот WINE, который вы указали.\n\
 Внимание! WINE не дает гарантии запуска игры.\n\
 Также работа WINE и игры не зависит от этого лаунчера.\n\
