Приведение в порядок репозиториев. Слиты воедино репозитории 'оффициальных' сборок и текущий. Некоторый функционал вынесен в отдельную библиотеку.

--- a/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
@@ -53,6 +53,12 @@ reg_error: You did not enter a username or password. \n\
 Before registering, fill in the login and password column. \n\
 They are located just above and to the right of the registration button.
 
+# Протокол сервера
+error_protocol_data_auth_empty: Authorization data is empty
+error_protocol_server_data_empty: Failed to parse the response from the server... Data received from the server is empty
+error_protocol_server_data_error: An error occurred while parsing received data from the server.
+error_protocol_server_not_response: Server is not responding.
+
 # Общие кнопки
 btn_settings: Settings
 btn_back: Back
@@ -95,6 +101,7 @@ msg_background_work_deny: Close the launcher after starting the game
 discord_allow: Discord integration
 dynamic_background: Dynamic background
 update_check: Check for updates
+clear_settings: Clear settings
 
 # Окно настроек клиента
 settings_title: Settings
