--- a/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
@@ -53,6 +53,12 @@ servers_empty: <html>Похоже список серверов пуст...<br>\
 Если виновник пустых серверов ошибка,<br> то вы сможете найти ее в логах (ALT + L)<br>\
 Попробывать поискать сервера снова?</html>
 
+# Протокол сервера
+error_protocol_data_auth_empty: Данные для авторизации пусты
+error_protocol_server_data_empty: Не удалось разобрать ответ от сервера... Данные пришедшие от сервера пусты
+error_protocol_server_data_error: Ошибка при разборе данных, полученных от сервера.
+error_protocol_server_not_response: Сервер не отвечает.
+
 # Общие кнопки
 btn_settings: Настройки
 btn_back: Назад
@@ -95,6 +101,7 @@ msg_background_work_deny: Закрыть лаунчер, после запуск
 discord_allow: Интеграция discord
 dynamic_background: Динамический фон
 update_check: Проверять обновления
+clear_settings: Очистить настройки
 
 # Окно настроек клиента
 settings_title: Настройки
