Обновлен кэш списка серверов. Добавлено удаление/добавление сервера в кэш.

--- a/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/en.cfg
@@ -82,6 +82,13 @@ btn_auth_redirect: Login
 btn_reg_submit: Register
 btn_reg_redirect: Register
 
+#Добавить сервер
+server_add: Add server
+server_add_ip: server IP
+server_add_name: Server name
+server_add_https: Use https?
+server_add_protocol: Protocol:
+
 # Окно логина
 auth_name: Login
 auth_error_title: Login Error
