--- a/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
+++ b/src/ru/vadimka/nfswlauncher/resources/locales/ru.cfg
@@ -82,6 +82,13 @@ btn_auth_redirect: Авторизоваться
 btn_reg_submit: Зарегистрироваться
 btn_reg_redirect: Зарегистрироваться
 
+#Добавить сервер
+server_add: Добавить сервер
+server_add_ip: IP сервера
+server_add_name: Название сервера
+server_add_https: Использовать https?
+server_add_protocol: Протокол:
+
 # Окно логина
 auth_name: Авторизация
 auth_error_title: Ошибка авторизации
